# aula09_python_jornada

./: README.md  etl.py  exemplo_00.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml
