[project]
name = "aula09-python-jornada"
version = "0.1.0"
description = ""
authors = [
    {name = "WesleyPenteado",email = "wesleycosta.ne@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "tenacity (>=9.1.4,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
